# SlotMachineSimulator

./: CMakeLists.txt  README.md  SlotMachineSimulator  SlotMachineSimulator.cpp
include/: LineFlowGraph.h  Node.h  Payline.h  Point.h  ProgramParameters.h  Range.h  Reel.h  Report.h  ResultCalculator.h  RewardTable.h  SlotMachine.h  SlotMachineConfig.h  Symbol.h  Utils.h
src/: Point.cpp  ProgramParameters.cpp  Reel.cpp  Report.cpp  RewardTable.cpp
test/: Test.cpp
